# Exercice1-Lajous-Harold

./: .gitignore  README.md  app.py  main.py  setup.cfg
controllers/: task_controller.py
models/: recurring_task.py  task.py
todolist-cli/: .gitignore  README.md  pyproject.toml  requirements.txt
todolist-cli/src/todolist/controllers/: task_controller.py
todolist-cli/src/todolist/storage/: json_storage.py
todolist-cli/src/todolist/utils/: validators.py
todolist-cli/src/todolist/views/: cli_view.py
todolist-cli/tests/: test_controller.py  test_task.py
