[metadata]
name = todolist-cli
version = 0.1.0
description = A command-line interface for managing a ToDo list.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/todolist-cli
license = MIT

[options]
packages = find:
install_requires =
    click
    jsonschema

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    todolist = todolist.main:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*