[tool.poetry]
name = "todolist-cli"
version = "0.1.0"
description = "A command-line interface for managing a ToDo list."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"  # For command-line interface
pydantic = "^1.8"  # For data validation

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"